Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
    "source": [
     "ice_cream_flavors = ['Mint Chocolate Chip', 'Coffee', 'Cookie Dough', 'Fudge Mint Brownie', 'Vanilla Bean']\n",
     "for flavor in ice_cream_flavors:\n",
-    "    print('I love ' + ice_cream_flavor + ' ice cream!!')"
+    "    print('I love ' + flavor + ' ice cream!!')"
    ]
   },
   {
